Make the checkout buttons a bit wider. I had hoped to make this fixed EM width IE-only (since it's really to keep the buttons from getting too wide in IE) as mentioned in the comments on ticket #169. However, that's prooving to be too tricky, so I'm just making it a bit wider.
svn commit r12620

--- a/www/styles/store-cart-page.css
+++ b/www/styles/store-cart-page.css
@@ -18,7 +18,7 @@
 	margin-left: 0.5em;
 	padding-top: 0.1em;
 	padding-bottom: 0.1em;
-	width: 12em;
+	width: 13em;
 }
 
 #header_update_button,
